# hs-tictactoe

./: tictactoe.cabal
src/: Main.hs  TicTacToe.hs  TicTacToeBoard.hs
src/TicTacToe/: Board.hs  Internal.hs  Player.hs
src/TicTacToeBoard/: Player.hs
tests/: main.hs
