name: tictactoe
version: 0.0.1
synopsis: TicTacToe API
build-type: Simple
license: AllRightsReserved
author: Riley Teige
maintainer: riley.teige@gmail.com
category: Game
build-type: Simple
cabal-version: >=1.2

library
    build-depends: QuickCheck -any, base -any, loop-while -any, transformers -any
    buildable: True
    hs-source-dirs: src

test-suite test-tictactoe
    build-depends:     QuickCheck -any, base -any
    main-is:           main.hs
    type:              exitcode-stdio-1.0
    buildable:         True
    cpp-options:       -DMAIN_FUNCTION=testMain
    hs-source-dirs:    src