name: tictactoe
version: 0.0.1
synopsis: TicTacToe API
build-type: Simple
license: AllRightsReserved
author: Riley Teige
maintainer: riley.teige@gmail.com
category: Game
build-type: Simple
cabal-version: >=1.8

library
    exposed-modules:     TicTacToe,
                         TicTacToe.Board,
                         TicTacToe.Player
    build-depends:       QuickCheck -any, base -any
    buildable:           True
    hs-source-dirs:      src

test-suite test-tictactoe
    build-depends:     QuickCheck == 2.7.6,
                       base == 4.6.*,
                       tictactoe,
                       HUnit == 1.2.5.*,
                       test-framework == 0.6,
                       test-framework-hunit == 0.3.*,
                       either-unwrap == 1.1
    main-is:           main.hs
    type:              exitcode-stdio-1.0
    hs-source-dirs:    tests
